--- a/Barrio1/Platforms/Android/AndroidManifest.xml
+++ b/Barrio1/Platforms/Android/AndroidManifest.xml
@@ -1,21 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
-	<application android:allowBackup="true" android:icon="@mipmap/appicon" 
-				 android:roundIcon="@mipmap/appicon_round" android:supportsRtl="true">
-		<receiver
-			android:name = "com.google.firebase.iid.FirebaseInstanceIdInternalReceiver"
-			android:exported = "false"/>
-		<receiver
-			android:name="com.google.firebase.iid.FirebaseINstanseIdReceiver"
-			android:exported="true"
-			android:permission="com.google.android.c2dm.permission.SEND">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1">
+	<application android:allowBackup="true" android:supportsRtl="true" android:label="BarrioChico" android:icon="@mipmap/appicon">
+		<receiver android:name="com.google.firebase.iid.FirebaseInstanceIdInternalReceiver" android:exported="false" />
+		<receiver android:name="com.google.firebase.iid.FirebaseINstanseIdReceiver" android:exported="true" android:permission="com.google.android.c2dm.permission.SEND">
 			<intent-filter>
-				<action android:name="com.google.adroid.c2dm.intent.RECEIVE"/>
-				<action android:name="com.google.adroid.c2dm.intent.REGISTRATION"/>
-				<category android:name="${applicationId}"/>
+				<action android:name="com.google.adroid.c2dm.intent.RECEIVE" />
+				<action android:name="com.google.adroid.c2dm.intent.REGISTRATION" />
+				<category android:name="${applicationId}" />
 			</intent-filter>
 		</receiver>
 	</application>
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.INTERNET" />
+	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 </manifest>
