--- a/Barrio1/Barrio1.csproj
+++ b/Barrio1/Barrio1.csproj
@@ -26,7 +26,7 @@
 		<ApplicationId>com.companyname.barrio1</ApplicationId>
 
 		<!-- Versions -->
-		<ApplicationDisplayVersion>1.0</ApplicationDisplayVersion>
+		<ApplicationDisplayVersion>1.3</ApplicationDisplayVersion>
 		<ApplicationVersion>1</ApplicationVersion>
 
 		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'android'">21.0</SupportedOSPlatformVersion>
@@ -130,7 +130,7 @@
 		<PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="8.0.20" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.0" />
 		<PackageReference Include="Plugin.Firebase" Version="2.0.13" />
-		<PackageReference Include="supabase-csharp" Version="0.16.1" />
+		<PackageReference Include="Supabase" Version="1.1.1" />
 		<PackageReference Include="Xamarin.AndroidX.Fragment.Ktx" Version="1.6.2.2" />
 	</ItemGroup>
 
