Renovacion del apartado visual previo a tema claro y oscuro

--- a/Barrio1/Barrio1.csproj
+++ b/Barrio1/Barrio1.csproj
@@ -135,6 +135,12 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<MauiXaml Update="Resources\Styles\Claro.xaml">
+		  <Generator>MSBuild:Compile</Generator>
+		</MauiXaml>
+		<MauiXaml Update="Resources\Styles\Oscuro.xaml">
+		  <Generator>MSBuild:Compile</Generator>
+		</MauiXaml>
 		<MauiXaml Update="Views\AddVentaPage.xaml">
 			<Generator>MSBuild:Compile</Generator>
 		</MauiXaml>
